# tag-mt-formats-eval

./: readme.md
Datasets/WMT17/: QualitativeTerminologyAdherenceEvaluation_TAG.xlsx  ResultsSummary.xlsx  gpt-4o-mini_2025_03_18_iate.414.incorrect_terminology.tsv.de  gpt-4o-mini_2025_03_18_iate.414.terminology_translation.tsv.de  gpt-4o-mini_2025_03_20_wikt.727.incorrect_terminology.tsv.de  gpt-4o-mini_2025_03_20_wikt.727.terminology_translation.tsv.de  gpt-4o_2025_03_19_iate.414.incorrect_terminology.tsv.de  gpt-4o_2025_03_19_iate.414.terminology_translation.tsv.de  iate.414.translation_times.csv  tag_2025_03_25_iate.414.incorrect_terminology.tsv.de  tag_2025_03_25_iate.414.terminology.tsv.en  tag_iate.414_translation_times.csv  wikt.727.translation_times.csv
FinalNotebooks/: ModelPipeline.ipynb
FinalNotebooks/.ipynb_checkpoints/: ModelPipeline-checkpoint.ipynb  TranslationEvaluation-checkpoint.ipynb
Open WebUI/kalcium-python-client/: LICENSE  README.md  pyproject.toml
Open WebUI/kalcium-python-client/src/kalcium_client/: __init__.py  client.py  kalcium_tag_functions.py  kalcium_termchecker.py  kalcium_translator.py  retrieval_endpoint_functions.py
Open WebUI/kalcium-python-client/src/kalcium_client/xml_utils/: Kalcium-v3-fields.xsd  Kalcium-v3-terms.xsd  KalciumXML.py
Open WebUI/model_configs/: tag-evaluation-gemma312b-no-format-description-1759481961034.json  tag-evaluation-gpt-4o-model-no-format-description-1759481989937.json  tag-evaluation-gpt-4o-model-tbx-1759481978338.json  tag-evaluation-gpt-4o-model-yaml-1759481998995.json  (+3 more)
(+3 files in other folders)
