[project]
name = "kalcium-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.0",
    "lxml>=6.0.0",
    "mcp[cli]>=1.12.3",
    "requests>=2.32.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
